--- a/view/pom.xml
+++ b/view/pom.xml
@@ -13,5 +13,12 @@
   		<artifactId>contract</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+    <groupId>fr.exia.showboard</groupId>
+    <artifactId>showboard</artifactId>
+    <version>1.0</version>
+    <scope>system</scope>
+    <systemPath>${project.basedir}/showboard.jar</systemPath>
+</dependency>
   </dependencies>
 </project>
